<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/activity_bar_homepage_btn"
        android:title="@string/homepage"
        android:icon="@drawable/tmdb_button_icon"
        app:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/activity_bar_youtube_btn"
        android:title="@string/youtube"
        android:icon="@drawable/youtube_icon"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/save_movie_btn"
        android:title="@string/add_to_favorites"
        android:icon="@drawable/ic_baseline_add_24"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/share_btn"
        android:title="@string/share"
        android:icon="@drawable/ic_baseline_share_24"
        app:showAsAction="always" />



</menu>