<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/DetailBackdropPathCardView"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp"
            >

            <ImageView
                android:id="@+id/DetailBackdropPath"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:src="@drawable/backdrop_preview"
                android:scaleType="centerCrop"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/DetailStatusCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="bottom"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <TextView
                    android:id="@+id/DetailStatus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/source_code_pro_semibold"
                    android:gravity="center"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    tools:text="Released" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/DetailVoteAverageCardView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_gravity="bottom|right"
                app:cardCornerRadius="30dp"
                tools:ignore="RtlHardcoded"
                app:cardElevation="0dp">

                <TextView
                    android:id="@+id/DetailVoteAverage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/rock_salt"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    tools:text="8.9" />

            </androidx.cardview.widget.CardView>

            <ProgressBar
                android:id="@+id/DetailBackdropPathProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateTint="@color/logo_color"
                android:alpha="0.8"
                />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/DetailInfoCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DetailBackdropPathCardView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="4dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/DetailPosterCardView"
                    android:layout_width="160dp"
                    android:layout_height="230dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/DetailTagline">

                    <ImageView
                        android:id="@+id/DetailPoster"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        tools:src="@drawable/preview_poster"
                        />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/DetailTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:fontFamily="@font/cinzel_decorative_black"
                    android:gravity="center"
                    android:textSize="28sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Wrath of Man" />

                <TextView
                    android:id="@+id/DetailTagline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/permanent_marker"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:alpha="0.8"
                    app:layout_constraintEnd_toEndOf="@+id/DetailTitle"
                    app:layout_constraintStart_toStartOf="@id/DetailTitle"
                    app:layout_constraintTop_toBottomOf="@id/DetailTitle"
                    tools:text="A one man army." />

                <TextView
                    android:id="@+id/DetailGenreTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:fontFamily="@font/cinzel_black"
                    android:textSize="16sp"
                    android:text="@string/genre"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/DetailPosterCardView"
                    app:layout_constraintTop_toTopOf="@+id/DetailPosterCardView" />

                <TextView
                    android:id="@+id/DetailGenre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="5dp"
                    android:alpha="0.6"
                    android:fontFamily="@font/roboto_mono_italic"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/DetailGenreTitle"
                    app:layout_constraintTop_toBottomOf="@+id/DetailGenreTitle"
                    tools:text="Action, Crime" />

                <TextView
                    android:id="@+id/DetailReleaseDateTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/release_date"
                    android:textStyle="bold"
                    android:fontFamily="@font/cinzel_black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/DetailGenre"
                    app:layout_constraintTop_toBottomOf="@+id/DetailGenre" />

                <TextView
                    android:id="@+id/DetailReleaseDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:alpha="0.6"
                    android:fontFamily="@font/roboto_mono_italic"
                    app:layout_constraintStart_toStartOf="@+id/DetailReleaseDateTitle"
                    app:layout_constraintTop_toBottomOf="@+id/DetailReleaseDateTitle"
                    tools:text="2021-05-25" />

                <TextView
                    android:id="@+id/DetailOriginalLanguageTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/original_language"
                    android:textStyle="bold"
                    android:fontFamily="@font/cinzel_black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/DetailReleaseDate"
                    app:layout_constraintTop_toBottomOf="@+id/DetailReleaseDate" />

                <TextView
                    android:id="@+id/DetailOriginalLanguage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:alpha="0.6"
                    android:fontFamily="@font/roboto_mono_italic"
                    app:layout_constraintStart_toStartOf="@+id/DetailOriginalLanguageTitle"
                    app:layout_constraintTop_toBottomOf="@+id/DetailOriginalLanguageTitle"
                    tools:text="EN" />

                <TextView
                    android:id="@+id/DetailOverviewTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/overview"
                    android:fontFamily="@font/cinzel_black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/DetailPosterCardView" />

                <TextView
                    android:id="@+id/DetailOverviewText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:alpha="0.6"
                    android:padding="1dp"
                    android:fontFamily="@font/montserrat"
                    android:textStyle="italic"
                    android:justificationMode="inter_word"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toTopOf="@id/DetailProductionCompaniesTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/DetailOverviewTitle"
                    tools:ignore="UnusedAttribute"
                    tools:text="A cold and mysterious new security guard for a Los Angeles cash truck company surprises his co-workers when he unleashes precision skills during a heist. The crew is left wondering who he is and where he came from. Soon, the marksman's ultimate motive becomes clear as he takes dramatic and irrevocable steps to settle a score." />

                <TextView
                    android:id="@+id/DetailProductionCompaniesTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:gravity="left"
                    android:text="@string/production_companies"
                    android:fontFamily="@font/cinzel_black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/DetailOverviewText"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/DetailProductionCompanies"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="left"
                    android:alpha="0.6"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="@+id/DetailProductionCompaniesTitle"
                    app:layout_constraintStart_toStartOf="@+id/DetailProductionCompaniesTitle"
                    app:layout_constraintTop_toBottomOf="@+id/DetailProductionCompaniesTitle"
                    tools:text="Marvel\nDC Comics" />

                <TextView
                    android:id="@+id/DetailProductionCountriesTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="left"
                    android:text="@string/production_countries"
                    android:fontFamily="@font/cinzel_black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/DetailProductionCompanies"
                    app:layout_constraintStart_toStartOf="@+id/DetailProductionCompanies"
                    app:layout_constraintTop_toBottomOf="@+id/DetailProductionCompanies"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/DetailProductionCountries"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/montserrat"
                    android:textStyle="italic"
                    android:alpha="0.6"
                    app:layout_constraintBottom_toTopOf="@id/detailsRatingStarsCardView"
                    app:layout_constraintEnd_toEndOf="@+id/DetailProductionCountriesTitle"
                    app:layout_constraintStart_toStartOf="@+id/DetailProductionCountriesTitle"
                    app:layout_constraintTop_toBottomOf="@+id/DetailProductionCountriesTitle"
                    tools:text="US\nUK" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/detailsRatingStarsCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/DetailProductionCountries"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="10dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:orientation="horizontal">
                        <ImageView
                            android:id="@+id/details_star1"
                            style="@style/bigStarSize"
                            android:src="@drawable/ic_baseline_star_24"
                            app:tint="@color/orange"
                            android:alpha="0.8"/>
                        <ImageView
                            android:id="@+id/details_star2"
                            style="@style/bigStarSize"
                            android:src="@drawable/ic_baseline_star_24"
                            app:tint="@color/orange"
                            android:alpha="0.8"/>
                        <ImageView
                            android:id="@+id/details_star3"
                            style="@style/bigStarSize"
                            android:src="@drawable/ic_baseline_star_half_24"
                            app:tint="@color/orange"
                            android:alpha="0.8"/>
                        <ImageView
                            android:id="@+id/details_star4"
                            style="@style/bigStarSize"
                            android:src="@drawable/ic_baseline_star_border_24"
                            app:tint="@color/orange"
                            android:alpha="0.8"/>
                        <ImageView
                            android:id="@+id/details_star5"
                            style="@style/bigStarSize"
                            android:src="@drawable/ic_baseline_star_border_24"
                            app:tint="@color/orange"
                            android:alpha="0.8" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>




</ScrollView>